--- a/RAS_ASP.NET/Views/Dish/Edit.cshtml
+++ b/RAS_ASP.NET/Views/Dish/Edit.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Cuisine ID</label>
+                <input asp-for="Cuisine.ID" class="form-control" />
+                <span asp-validation-for="Cuisine.ID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
                 <input asp-for="ID" class="form-control" />
                 <span asp-validation-for="ID" class="text-danger"></span>
@@ -45,4 +50,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/validationlocalization.js"></script>
 }
