--- a/RAS_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/RAS_ASP.NET/Views/Shared/_Layout.cshtml
@@ -28,6 +28,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cuisine" asp-action="Index">Cuisines</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dish" asp-action="Index">Dishes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Component" asp-action="Index">Components</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Supply" asp-action="Index">Supplies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
