--- a/RAS_ASP.NET/Views/Dish/Index.cshtml
+++ b/RAS_ASP.NET/Views/Dish/Index.cshtml
@@ -44,7 +44,7 @@
                 @Html.DisplayFor(modelItem => item.Weight)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cuisine)
+                @Html.DisplayFor(modelItem => item.Cuisine.ID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ID)
