--- a/RAS_ASP.NET/Views/Supply/Create.cshtml
+++ b/RAS_ASP.NET/Views/Supply/Create.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Product ID</label>
+                <input asp-for="Product.ID" class="form-control" />
+                <span asp-validation-for="Product.ID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
                 <input asp-for="ID" class="form-control" />
                 <span asp-validation-for="ID" class="text-danger"></span>
@@ -45,4 +50,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/validationlocalization.js"></script>
 }
