--- a/RAS_ASP.NET/Views/Component/Delete.cshtml
+++ b/RAS_ASP.NET/Views/Component/Delete.cshtml
@@ -11,16 +11,30 @@
     <h4>ComponentEntity</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NeedCount)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NeedCount)
         </dd>
-        <dt class = "col-sm-2">
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayName("Dish ID")
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Dish.ID)
+        </dd>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayName("Product ID")
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Product.ID)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ID)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ID)
         </dd>
     </dl>
