--- a/RAS_ASP.NET/Views/Component/Edit.cshtml
+++ b/RAS_ASP.NET/Views/Component/Edit.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="NeedCount" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Dish ID</label>
+                <input asp-for="Dish.ID" class="form-control" />
+                <span asp-validation-for="Dish.ID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Product ID</label>
+                <input asp-for="Product.ID" class="form-control" />
+                <span asp-validation-for="Product.ID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
                 <input asp-for="ID" class="form-control" />
                 <span asp-validation-for="ID" class="text-danger"></span>
@@ -35,4 +45,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/validationlocalization.js"></script>
 }
