--- a/RAS_ASP.NET/Views/Component/Index.cshtml
+++ b/RAS_ASP.NET/Views/Component/Index.cshtml
@@ -16,6 +16,14 @@
                 @Html.DisplayNameFor(model => model.NeedCount)
             </th>
             <th>
+                @Html.DisplayName("Dish ")
+                @Html.DisplayNameFor(model => model.Dish.ID)
+            </th>
+            <th>
+                @Html.DisplayName("Product ")
+                @Html.DisplayNameFor(model => model.Product.ID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ID)
             </th>
             <th></th>
@@ -31,9 +39,15 @@
                 @Html.DisplayFor(modelItem => item.ID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.DisplayFor(modelItem => item.Dish.ID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Product.ID)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
 }
