--- a/RAS_ASP.NET/Views/Procedure1/Create.cshtml
+++ b/RAS_ASP.NET/Views/Procedure1/Create.cshtml
@@ -1,21 +1,19 @@
-﻿@model WebApplication.Data.Entities.OrderEntity
+﻿@model RAS_ASP.NET.Models.OrderProcedure
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Procedure 1</h1>
 
-<h4>OrderEntity</h4>
+<h4>Create a new orders in restaurant</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PayType" class="control-label"></label>
-                <input asp-for="PayType" class="form-control" />
-                <span asp-validation-for="PayType" class="text-danger"></span>
+                <select asp-for="@Model.PayType" asp-items="Html.GetEnumSelectList<RAS_ASP.NET.Models.PaymentType>()"></select>
             </div>
             <div class="form-group">
                 <label class="control-label">Dish ID</label>
@@ -28,14 +26,18 @@
                 <span asp-validation-for="ID" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UseCheck" class="control-label"></label>
+                <input asp-for="UseCheck" class="form-control" type="checkbox"/>
+                <span asp-validation-for="UseCheck" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+            <div>
+                @Html.DisplayFor(model => model.Status)
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
