--- a/RAS_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/RAS_ASP.NET/Views/Shared/_Layout.cshtml
@@ -43,10 +43,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Procedure1" asp-action="Create">Procedure 1</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Procedure1" asp-action="Create">Procedure 1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Procedure2" asp-action="Create">Procedure 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
