--- a/RAS_ASP.NET/Views/Procedure2/Create.cshtml
+++ b/RAS_ASP.NET/Views/Procedure2/Create.cshtml
@@ -33,13 +33,18 @@
                 <span asp-validation-for="Component.Count" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Cuisine ID</label>
+                <input asp-for="Cuisine.ID" class="form-control" />
+                <span asp-validation-for="Cuisine.ID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
                 <input asp-for="ID" class="form-control" />
                 <span asp-validation-for="ID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-            </div>  
+            </div>
         </form>
     </div>
 </div>
