--- a/RAS_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/RAS_ASP.NET/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Procedure2" asp-action="Create">Procedure 2</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Procedure3" asp-action="Create">Procedure 3</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
