--- a/RAS_ASP.NET/Views/Procedure2/Create.cshtml
+++ b/RAS_ASP.NET/Views/Procedure2/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication.Data.Entities.DishEntity
+﻿@model RAS_ASP.NET.Models.DishProcedure
 
 @{
     ViewData["Title"] = "Create";
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Component.Count" class="control-label"></label>
-                <input asp-for="Component.Count" class="form-control" />
-                <span asp-validation-for="Component.Count" class="text-danger"></span>
+                <label asp-for="ComponentCount" class="control-label"></label>
+                <input asp-for="ComponentCount" class="form-control" />
+                <span asp-validation-for="ComponentCount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Cuisine ID</label>
@@ -35,8 +35,55 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <div>
+                @Html.DisplayFor(model => model.Status)
+            </div>
         </form>
     </div>
+            @if (Model.Component.Count > 0)
+            {
+
+                    <table id="Table1" runat="server" class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Component[0].NeedCount)
+                                </th>
+                                <th>
+                                    @Html.DisplayName("Dish ")
+                                    @Html.DisplayNameFor(model => model.Component[0].Dish.ID)
+                                </th>
+                                <th>
+                                    @Html.DisplayName("Product ")
+                                    @Html.DisplayNameFor(model => model.Component[0].Product.ID)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Component[0].ID)
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Component)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.NeedCount)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Dish.ID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Product.ID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ID)
+                                    </td>
+                                </tr>
+                            }
+                    </table>
+            }
+       
+    
 </div>
 
 @section Scripts {
