Procedure 3 text wrapping fix

--- a/RAS_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/RAS_ASP.NET/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         <li class="nav-item text-nowrap">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Procedure2" asp-action="Create">Procedure 2</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-nowrap">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Procedure3" asp-action="Create">Procedure 3</a>
                         </li>
                         <li class="nav-item">
