--- a/RAS_ASP.NET/Views/Procedure3/Create.cshtml
+++ b/RAS_ASP.NET/Views/Procedure3/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="ID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Display" class="btn btn-primary" />
             </div>
             <div>
                 @Html.DisplayFor(model => model.Status)
