--- a/RAS_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/RAS_ASP.NET/Views/Shared/_Layout.cshtml
@@ -51,6 +51,9 @@
                         <li class="nav-item text-nowrap">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Procedure3" asp-action="Create">Procedure 3</a>
                         </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderSummary" asp-action="Index">Order Summary</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
